deployment-all.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aplicacao-12fatores
spec:
  replicas: 2 
  template:
    metadata:
      labels:
       name: aplicacao-12fatores
    spec:
      containers:
        - name: container-aplicacao-12fatores
          image: concretecristiantrucco/12-factor  
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: servico-aplicacao-12fatores
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000

  selector:
    name: aplicacao-12fatores
---
