servico-aplicacao.yaml
apiVersion: v1
kind: Service
metadata:
  name: servico-aplicacao-12fatores
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  selector:
    name: aplicacao-12fatores
